renamed newProductRequest to be more generic, required the url be passed everytime to track/untrack product
