# backend/ProductService/src/main/java/io/swagger/api/TrackingApi.java
@@ -5,7 +5,7 @@
  */
 package io.swagger.api;
 
-import io.swagger.model.AddProductRequest;
+import io.swagger.model.ProductRequest;
 import io.swagger.model.LoginToken;
 import io.swagger.model.ProductItem;
 import io.swagger.annotations.*;
@@ -31,7 +31,7 @@ public interface TrackingApi {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.PUT)
-    ResponseEntity<ProductItem> addTrackedProduct(@ApiParam(value = "" ,required=true )  @Valid @RequestBody AddProductRequest body);
+    ResponseEntity<ProductItem> addTrackedProduct(@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProductRequest body);
 
 
     @ApiOperation(value = "Delete a product from the user's wishlist", nickname = "deleteTrackedProduct", notes = "", response = ProductItem.class, tags={ "Tracking", })
@@ -43,7 +43,7 @@ public interface TrackingApi {
         produces = { "application/json" },
         consumes = { "application/json" },
         method = RequestMethod.DELETE)
-    ResponseEntity<ProductItem> deleteTrackedProduct(@ApiParam(value = "",required=true) @PathVariable("productId") Long productId, @Valid @RequestBody LoginToken token);
+    ResponseEntity<ProductItem> deleteTrackedProduct(@ApiParam(value = "",required=true) @PathVariable("productId") Long productId, @Valid @RequestBody ProductRequest token);
 
 
     @ApiOperation(value = "Information about an item being tracked by the user defined by the login token", nickname = "getTrackedProductInfo", notes = "", response = ProductItem.class, tags={ "Tracking", })
@@ -55,7 +55,7 @@ public interface TrackingApi {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    ResponseEntity<ProductItem> getTrackedProductInfo(@ApiParam(value = "",required=true) @PathVariable("productId") Long productId,@ApiParam(value = "" ,required=true )  @Valid @RequestBody LoginToken body);
+    ResponseEntity<ProductItem> getTrackedProductInfo(@ApiParam(value = "",required=true) @PathVariable("productId") Long productId,@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProductRequest body);
 
 
     @ApiOperation(value = "Get all product information for a user defined by their token", nickname = "getTrackedProducts", notes = "", response = ProductItem.class, responseContainer = "List", tags={ "Tracking", })
