# doc/phase1/swagger.yaml
@@ -262,7 +262,7 @@ paths:
         name: "body"
         required: true
         schema:
-          $ref: "#/definitions/LoginToken"
+          $ref: "#/definitions/NewProductRequest"
       responses:
         200:
           description: "Successful"
@@ -289,7 +289,7 @@ paths:
         name: "body"
         required: true
         schema:
-          $ref: "#/definitions/LoginToken"
+          $ref: "#/definitions/NewProductRequest"
       
       - in: "body"
         name: "body"
@@ -325,7 +325,7 @@ paths:
         name: "body"
         required: true
         schema:
-          $ref: "#/definitions/LoginToken"
+          $ref: "#/definitions/NewProductRequest"
       responses:
         200:
           description: "Successful"
